<resources>
    <string name="app_name">Game Of Thrones</string>
    <string name="no_internet">Интернет недоступен - приложение не может быть запущенно. Подключитесь к интернету и перезапустите приложение</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_is_not_available">Information is unknown</string>
    <string name="title_activity_character_screen">CharacterScreen</string>
    <string name="action_settings">Settings</string>
    <string name="title_sample">"North Lord\n\nNorth Lord\n\nNorth Lord\n\nNorth Lord\n\n"</string>
    <string name="menu_search_title">Поиск</string>
    <string name="character_detail_title_words">Words</string>
    <string name="character_detail_title_born">Born</string>
    <string name="character_detail_title_titles">Titles</string>
    <string name="character_detail_title_aliases">Aliases</string>
    <string name="character_detail_title_father">Father</string>
    <string name="character_detail_title_mother">Mother</string>
</resources>
