<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.CharacterScreen"
    >
<!--    tools:showIn="@layout/activity_character_screen">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_normal_16">
        <ImageView
            android:layout_marginEnd="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:id="@+id/ic_words"
            android:src="@drawable/ic_icon_decor"
            android:layout_width="@dimen/character_detail_icon_size"
            android:layout_height="@dimen/character_detail_icon_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/tv_words_title"
            android:paddingTop="@dimen/spacing_tiny_8"
            android:layout_width="@dimen/character_detail_title_width"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ic_words"
            android:layout_alignBottom="@+id/ic_words"
            android:layout_toEndOf="@+id/ic_words"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/character_detail_title_words"
            android:textColor="@android:color/black"
            android:textSize="@dimen/character_detail_title_size" />

        <TextView
            android:paddingTop="@dimen/spacing_tiny_8"
            android:id="@+id/tv_words_text"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ic_words"
            android:layout_alignBottom="@+id/ic_words"
            android:layout_toEndOf="@+id/tv_words_title"
            android:fontFamily="sans-serif"
            android:gravity="start"
            android:textColor="@color/color_gray_dark"
            android:textSize="@dimen/character_detail_title_size" />

        <ImageView
            android:id="@+id/ic_born"
            android:layout_marginEnd="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:src="@drawable/ic_icon_decor"
            android:layout_width="@dimen/character_detail_icon_size"
            android:layout_height="@dimen/character_detail_icon_size"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ic_words"
            />

        <TextView
            android:paddingTop="@dimen/spacing_tiny_8"
            android:id="@+id/tv_born_title"
            android:layout_width="@dimen/character_detail_title_width"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ic_born"
            android:layout_alignBottom="@+id/ic_born"
            android:layout_toEndOf="@+id/ic_born"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/character_detail_title_born"
            android:textColor="@android:color/black"
            android:textSize="@dimen/character_detail_title_size" />
        <TextView
            android:id="@+id/tv_born_text"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:paddingTop="@dimen/spacing_tiny_8"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/character_detail_title_size"
            android:fontFamily="sans-serif"
            android:textColor="@color/color_gray_dark"
            android:layout_toEndOf="@+id/tv_words_title"
            android:layout_alignBottom="@+id/ic_born"
            android:layout_alignTop="@id/ic_born"
            />
        <ImageView
            android:layout_marginEnd="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:id="@+id/ic_titles"
            android:src="@drawable/ic_icon_decor"
            android:layout_width="@dimen/character_detail_icon_size"
            android:layout_height="@dimen/character_detail_icon_size"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ic_born"
            />

        <TextView
            android:id="@+id/tv_titles_title"
            android:paddingTop="@dimen/spacing_tiny_8"
            android:layout_width="@dimen/character_detail_title_width"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ic_titles"
            android:layout_alignBottom="@+id/ic_titles"
            android:layout_toEndOf="@+id/ic_titles"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/character_detail_title_titles"
            android:textColor="@android:color/black"
            android:textSize="@dimen/character_detail_title_size" />
        <TextView
            android:id="@+id/tv_titles_text"
            android:paddingTop="@dimen/spacing_tiny_8"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:singleLine="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/character_detail_title_size"
            android:fontFamily="sans-serif"
            android:textColor="@color/color_gray_dark"
            android:layout_toEndOf="@+id/tv_titles_title"
            android:layout_alignTop="@id/ic_titles"
            android:layout_alignBaseline="@+id/ic_titles"
            />
        <ImageView
            android:layout_marginEnd="@dimen/spacing_tiny_8"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:id="@+id/ic_aliases"
            android:src="@drawable/ic_icon_decor"
            android:layout_width="@dimen/character_detail_icon_size"
            android:layout_height="@dimen/character_detail_icon_size"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_titles_text"
            />

        <TextView
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:id="@+id/tv_aliases_title"
            android:layout_width="@dimen/character_detail_title_width"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ic_aliases"
            android:layout_toEndOf="@+id/ic_aliases"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/character_detail_title_aliases"
            android:textColor="@android:color/black"
            android:textSize="@dimen/character_detail_title_size" />
        <TextView
            android:layout_marginTop="@dimen/spacing_tiny_8"
            android:id="@+id/tv_aliases_text"
            android:layout_marginBottom="@dimen/spacing_tiny_8"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/character_detail_title_size"
            android:fontFamily="sans-serif"
            android:textColor="@color/color_gray_dark"
            android:layout_toEndOf="@+id/tv_aliases_title"
            android:layout_alignTop="@id/ic_aliases"
            />
        <RelativeLayout
            android:layout_below="@+id/tv_aliases_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal_16">
            <ImageView
                android:layout_marginEnd="@dimen/spacing_tiny_8"
                android:layout_marginBottom="@dimen/spacing_tiny_8"
                android:id="@+id/ic_father"
                android:src="@drawable/ic_icon_decor"
                android:layout_width="@dimen/character_detail_icon_size"
                android:layout_height="@dimen/character_detail_icon_size"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                />

            <TextView
                android:paddingTop="@dimen/spacing_tiny_8"
                android:id="@+id/tv_father_title"
                android:layout_width="@dimen/character_detail_title_width"
                android:layout_marginBottom="@dimen/spacing_tiny_8"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ic_father"
                android:layout_alignBottom="@+id/ic_father"
                android:layout_toEndOf="@+id/ic_father"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="@string/character_detail_title_father"
                android:textColor="@android:color/black"
                android:textSize="@dimen/character_detail_title_size"
                />
            <Button
                android:id="@+id/btn_father"
                android:layout_marginBottom="@dimen/spacing_tiny_8"
                android:paddingTop="10dp"
                android:textColor="@android:color/white"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/character_detail_title_size"
                android:fontFamily="sans-serif"
                android:layout_toEndOf="@+id/tv_father_title"
                android:layout_alignParentTop="true"
                />
            <ImageView
                android:layout_marginEnd="@dimen/spacing_tiny_8"
                android:layout_marginBottom="@dimen/spacing_tiny_8"
                android:id="@+id/ic_mother"
                android:src="@drawable/ic_icon_decor"
                android:layout_width="@dimen/character_detail_icon_size"
                android:layout_height="@dimen/character_detail_icon_size"
                android:layout_alignParentStart="true"
                android:layout_below="@id/btn_father"

                />

            <TextView
                android:paddingTop="@dimen/spacing_tiny_8"
                android:id="@+id/tv_mother_title"
                android:layout_width="@dimen/character_detail_title_width"
                android:layout_marginBottom="@dimen/spacing_tiny_8"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ic_mother"
                android:layout_alignBottom="@+id/ic_mother"
                android:layout_toEndOf="@+id/ic_mother"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:text="@string/character_detail_title_mother"
                android:textColor="@android:color/black"
                android:textSize="@dimen/character_detail_title_size" />
            <Button
                android:id="@+id/btn_mother"
                android:layout_marginBottom="@dimen/spacing_tiny_8"
                android:paddingTop="10dp"
                android:textColor="@android:color/white"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/character_detail_title_size"
                android:fontFamily="sans-serif"
                android:layout_toEndOf="@+id/tv_mother_title"
                android:layout_alignTop="@id/ic_mother"
                />

        </RelativeLayout>


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>